Revert "fix(Cards) remove redunant styling, fixes content whitespace"
This reverts commit 3d799a3b91fffe1f8db50a7aef3d3a680c7ea002.

--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -134,6 +134,11 @@
     }
 
     .activator {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top:0;
+      bottom: 0;
       cursor: pointer;
     }
   }
